k8s/homeassistant/homebridge.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homebridge
  namespace: homeassistant
spec:
  selector:
    matchLabels:
      app: homebridge
  replicas: 1
  template:
    metadata:
      labels:
        app: homebridge
    spec:
      hostNetwork: true
      containers:
      - name: homebridge
        image: homebridge/homebridge:latest
        ports:
        - name: web
          containerPort: 8581
        volumeMounts:
        - name: homebridge
          mountPath: /homebridge
      volumes:
      - name: homebridge
        persistentVolumeClaim:
          claimName: homebridge

---
apiVersion: v1
kind: Service
metadata:
  name: homebridge
  namespace: homeassistant
  annotations:
    tailscale.com/expose: "true"
    tailscale.com/hostname: "homebridge"
    external-dns.alpha.kubernetes.io/hostname: homebridge.r.ss
spec:
  type: LoadBalancer
  selector:
    app: homebridge
  ports:
  - name: http
    port: 80
    targetPort: web
