k8s/homeassistant/homeassistant.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: homeassistant

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homeassistant
  namespace: homeassistant
spec:
  selector:
    matchLabels:
      app: homeassistant
  replicas: 1
  template:
    metadata:
      labels:
        app: homeassistant
    spec:
      nodeName: charlie
      hostNetwork: true
      containers:
      - name: home-assistant
        image: ghcr.io/home-assistant/home-assistant:2024.10
        ports:
        - name: web
          containerPort: 8123
        volumeMounts:
        - name: config
          mountPath: /config
        - name: usb
          mountPath: /dev/ttyUSB0
        securityContext:
          privileged: true
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: config
      - name: usb
        hostPath:
          path: /dev/ttyUSB0

---
apiVersion: v1
kind: Service
metadata:
  name: homeassistant
  namespace: homeassistant
  annotations:
    # tailscale.com/expose: "true"
    # tailscale.com/hostname: "homeassistant"
    external-dns.alpha.kubernetes.io/hostname: homeassistant.r.ss
spec:
  type: LoadBalancer
  selector:
    app: homeassistant
  ports:
  - name: http
    port: 80
    targetPort: web

# homeassistant-40411
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homeassistant
  namespace: homeassistant
spec:
  ingressClassName: nginx
  rules:
    - host: ha.k8s.rileysnyder.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name:  homeassistant
                port:
                  number: 80
